--- a/.github/workflows/AzerothCore-WoTLK.yml
+++ b/.github/workflows/AzerothCore-WoTLK.yml
@@ -1,4 +1,4 @@
-name: 编译 AzerothCore-WoTLK (Windows x64)
+name: 编译 AzerothCore-WoTLK
 
 on:
   workflow_dispatch:
@@ -168,7 +168,7 @@ jobs:
         shell: pwsh
 
       - name: 上传编译产物
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: azerothcore-windows-x64-${{ github.event.inputs.buildType }}
           path: azerothcore-*.zip
