--- a/.github/workflows/AzerothCore-WoTLK.yml
+++ b/.github/workflows/AzerothCore-WoTLK.yml
@@ -73,12 +73,13 @@ jobs:
           cmake .. \
             -DCMAKE_BUILD_TYPE="$BUILD_TYPE" \
             -DCMAKE_INSTALL_PREFIX=../install \
-            -DTOOLS=1 \
-            -DSCRIPTS=1 \
-            -DMODULES=1 \
-            -DCMAKE_C_COMPILER=gcc \
-            -DCMAKE_CXX_COMPILER=g++ \
-            -DBUILD_SHARED_LIBS=OFF
+            -DCMAKE_C_COMPILER=/usr/bin/clang \
+            -DCMAKE_CXX_COMPILER=/usr/bin/clang++ \
+            # -DBUILD_SHARED_LIBS=OFF \
+            -DWITH_WARNINGS=1 \
+            -DTOOLS_BUILD=all \
+            -DSCRIPTS=static \
+            -DMODULES=static \
 
       - name: 编译项目
         run: |
